--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,11 @@
 <div class="main-content">
 
 {{>header}}
+
+<p>
+  This site was created by Noel Connolly. It uses data drom mapbox.com and darksky.net
+</p>
+
 <img class = "portrait other" src = "/img/robot.png">
 </div>
 
