--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -18,7 +18,7 @@
 {{>header}}
 
 <p>
-  This site was created by Noel Connolly. It uses data from mapbox.com and darksky.net
+  This site was created by Noel Connolly. It uses data from mapbox.com and darksky.net!!!!!!
 </p>
 
 <img class = "portrait other" src = "/img/robot.png">
